--- a/LibraryMaker/DxFuncLib/DxFuncLib.vcxproj.filters
+++ b/LibraryMaker/DxFuncLib/DxFuncLib.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\..\Include\DxLib\DxFunc.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="ImageMGR.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,10 +69,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="small.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="DxFuncLib.ico">
+    <Image Include="MyIcon.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
   </ItemGroup>
