--- a/LibraryMaker/DxFuncLib/DxFuncLib.vcxproj
+++ b/LibraryMaker/DxFuncLib/DxFuncLib.vcxproj
@@ -173,6 +173,8 @@
     <ClInclude Include="input.h" />
     <ClInclude Include="ObjectIF.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SceneChanger.h" />
+    <ClInclude Include="SceneMGR.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -180,6 +182,7 @@
     <ClCompile Include="DxClass.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="SceneChanger.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
