--- a/LibraryMaker/RndomerLib/RndomerLib.vcxproj
+++ b/LibraryMaker/RndomerLib/RndomerLib.vcxproj
@@ -162,6 +162,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Include\Randomer.h" />
+    <ClInclude Include="Lottery.h" />
     <ClInclude Include="Randomer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
